--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
     <!-- ARKUSZE STYLI -->
     <link rel="stylesheet" href="css/vendor/normalize.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Oswald:400,600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald:300,600" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link href="images/favicon.ico" rel="shortcut icon" type="image/ico">
     <script>
@@ -40,100 +40,96 @@
 </head>
 
 <body>
+    <!-- HEADER -->
     <header class="page__header">
         <img class="header__logo" src="images/logo.png" alt="logo firmy geokart">
-
         <nav class="header__menu">
-        <button class="fa fa-bars menu__btn" title=" otwórz menu " aria-hidden="true" ></button>
+            <button class="fa fa-bars menu__btn" title=" otwórz menu " aria-hidden="true"></button>
             <ul class="menu__list">
-                <li class="list__elem"><a class="list__link" tabindex="0" href="#slide " title="strona główna ">home</a></li>
-                <li class="list__elem"><a class="list__link" tabindex="0" href="# ">o firmie</a></li>
-                <li class="list__elem"><a class="list__link" tabindex="0" href="# ">realizacje</a></li>
+                <li class="list__elem"><a class="list__link" tabindex="0" href="#start" title="strona główna ">home</a></li>
+                <li class="list__elem"><a class="list__link" tabindex="0" href="#company">o firmie</a></li>
+                <li class="list__elem"><a class="list__link" tabindex="0" href="#realizations">realizacje</a></li>
                 <li class="list__elem"><a class="list__link" tabindex="0" href="# ">referencje</a></li>
                 <li class="list__elem"><a class="list__link" tabindex="0" href="# ">kontakt</a></li>
-                <li class="list__elem"><a class="list__link" tabindex="0" href="# ">linki</a></li> 
+                <li class="list__elem"><a class="list__link" tabindex="0" href="# ">linki</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section class="slide " id="slide ">
-<div class="slide__header ">
-    <h1>geo-kart</h1>
-    <p><i class="slide__info2 "></i>s.c.</p>
-    <p>2006</p>
-</div>
-            <!-- <h1 class="slide__header ">geo-kart s.c.</h1> -->
-            <p class="slide__info ">Od ponad 15 lat zajmujemy się realizacjami prac geodezyjnych</p>
-            
-
-  <svg xmlns="http://www.w3.org/2000/svg " viewBox="0 0 100 100 " preserveAspectRatio="none ">
-    <polygon class="svg--sm " fill="#8F989B " points="0,0 30,100 65,21 90,100 100,75 100,100 0,100 "/>
-    <polygon class="svg--lg " fill="#8F989B " points="0,0 15,100 33,21 45,100 50,75 55,100 72,20 85,100 95,50 100,80 100,100 0,100 " />
-  </svg>
-
-
+        <!-- START -->
+        <section class="start" id="start">
+            <div class="start__container">
+                <h1 class="start__header">geo-kart</h1>
+                <p class="start__info start__info-small">2006</p>
+                <p class="start__info">s.c.</p>
+            </div>
+            <p class="start__info2">Od ponad 15 lat zajmujemy się realizacjami prac geodezyjnych</p>
+            <svg xmlns="http://www.w3.org/2000/svg " viewBox="0 0 100 100 " preserveAspectRatio="none ">
+                <polygon class="svg--sm " fill="#8F989B " points="0,0 30,100 65,21 90,100 100,75 100,100 0,100 " />
+                <polygon class="svg--lg " fill="#8F989B " points="0,0 15,100 33,21 45,100 50,75 55,100 72,20 85,100 95,50 100,80 100,100 0,100 " />
+            </svg>
         </section>
-        <section class="company " id="company ">
+        <!-- COMPANY -->
+        <section class="company" id="company">
             <h2 class="company__header ">o firmie</h2>
-            <article class="company__article ">
+            <article class="company__article">
                 Jesteśmy profesjonalnym i kompetentnym zespołem geodetów posiadającym kilkunastoletnie doświadczenie w branży geodezyjnej, które zaowocowało złożeniem w 2006 roku firmy GEO-KART S.C.
-                <br> Świadczymy usługi geodezyjne dla firm budowlanych, instalacyjnych, biur projektowych, urzędów miast i gmin oraz osób prywatnych na terenie Wrocławia i okolicznych powiatów.
-                <br> Posiadamy uprawnienia (zakres 1,4) do prowadzenia obsługi inwestycji budowlanych, sporządzania map powykonawczych oraz do celów projektowych.
-                <br> Odpowiednie wykształcenie i kilkunastoletnia praktyka w zawodzie gwarantują wykonanie każdego zlecenia na najwyższym poziomie.
+                <br> Świadczymy usługi geodezyjne dla firm budowlanych, instalacyjnych, biur projektowych, urzędów miast i gmin oraz osób prywatnych.
+                <br> Odpowiednie wykształcenie, uprawnienia (<b>zakres 1,4</b>) oraz kilkunastoletnia praktyka w zawodzie gwarantują wykonanie każdego zlecenia na najwyższym poziomie.
             </article>
-            <article class="company__article2 ">
-                Pomiary wykonujemy w krótkich terminach, dokumentację odbieramy i dostarczamy do rąk zleceniodawcy. Niezawodność i terminowość sprawiają, iż współpraca z nami jest korzystna nie tylko z aspektu ekonomicznego, ale również jest czystą przyjemnością.
-                <br /> Zapewniamy nowoczesne rozwiązania geodezyjno kartograficzne dostosowane do Państwa potrzeb
+            <article class="company__article">
+                Niezawodność i terminowość sprawiają, iż współpraca z nami jest korzystna nie tylko z aspektu ekonomicznego, ale również jest czystą przyjemnością.
+                <br /> Zapewniamy w krótkich terminach wykonanie nowoczesnych rozwiązań geodezyjno kartograficznych dostosowanych do Państwa potrzeb.
             </article>
-            <article>
-                <h3 class="company__article__header ">Wykonujemy</h3>
-                <ul class="company__article__list ">
-                    <li>Pomiary powykonawcze do odbiorów obiektów</li>
-                    <li>Geodezyjne pomiary sytuacyjno-wysokościowe, realizacyjne i inwentaryzacyjne</li>
-                    <li>Geodezyjna obsługa inwestycji</li>
-                    <li>Wytyczenie: budynków, budowli, urządzeń.</li>
-                    <li>Tyczenie infrastruktury sieci podziemnych</li>
-                    <li>Pomiar objętości mas ziemnych</li>
-                    <li>Pomiary kontrolne, przemieszeń i odkształceń</li>
-                    <li>Pomiary powykonawcze</li>
-                    <li>Pokładne Mapy do celów projektowych formaty .dgn .dwg .dxf .shp</li>
-                    <li>Kartowania map powykonawczych oraz Map do celów projektowych</li>
-                    <li>Edycja, kalibracja, wpasowanie map rastrowych</li>
-                    <li>Nadzory geodezyjne.</li>
+            <article class="company__article">
+                <h3 class="article__header">Wykonujemy</h3>
+                <ul class="article__list">
+                    <li class="list__elem">Pomiary powykonawcze do odbiorów obiektów budowlanych</li>
+                    <li class="list__elem">Geodezyjne pomiary inwentaryzacyjne</li>
+                    <li class="list__elem">Geodezyjna obsługa inwestycji</li>
+                    <li class="list__elem">Wytyczenie: budynków, budowli, urządzeń.</li>
+                    <li class="list__elem">Tyczenie infrastruktury sieci podziemnych</li>
+                    <li class="list__elem">Pomiar objętości mas ziemnych</li>
+                    <li class="list__elem">Pomiary kontrolne, przemieszeń i odkształceń</li>
+                    <li class="list__elem">Mapy do celów projektowych formaty .dgn .dwg .dxf .shp</li>
+                    <li class="list__elem">Kartowanie map powykonawczych oraz Map do celów projektowych</li>
+                    <li class="list__elem">Edycja, kalibracja, wpasowanie map rastrowych</li>
+                    <li class="list__elem">Nadzory geodezyjne.</li>
                 </ul>
             </article>
         </section>
-        <section class="realizations " id="realizations ">
-            <h2 class="realizations__header ">realizacje</h2>
-            <article>
-                <p>ZAUFAŁO NAM WIELE FIRM I KLIENTÓW INDYWIDUALNYCH
-                    <br> potwierdza to uczestnictwo przy większych realizacjach:</p>
-                <ul class="realizations__list ">
-                    <li>Budowa płyty postojowej dla Samolotów – Lotnisko Wrocław, Strachowice</li>
-                    <li>Obsługa budowy mostów Warszawskich – Wrocław</li>
-                    <li>Realizacja magistrali wodociągowej – Wrocław, Opatowice-Strachocin</li>
-                    <li>Realizacji sieci 110kv Wrocław GPZ Krucza – GPZ Skarbowców</li>
-                    <li>Geodezyjna obsługa budowy trasy DK94 Wrocław – Środa Śląska</li>
-                    <li>Geodezyjna obsługa Hal przemysłowych Bosch, Wrocław</li>
-                    <li>Obsługa budowy Betoniarni ul. Kępińska Wrocław</li>
-                    <li>Przebudowy Wrocławskich dróg m.in. Hubska, Ślężna, Pl. Grunwaldzki, Kosmonautów, Weigla, Pl. Powstańców Wielkopolskich</li>
-                    <li>Budowa budynku "Nosorożarni " ZOO Wrocław</li>
-                    <li>Kompleks dydaktyczno-koncertowy Akademii Muzycznej we Wrocławiu</li>
-                    <li>Modernizacja filtrów uzdatniania wody MPWiK przy ul. Na Grobli we Wrocławiu</li>
-                    <li>Pomiar zniekształceń kolektora sanitarnego Ślęza</li>
-                    <li>Przebudowa ul Miłoszyckiej</li>
-                    <li>Budowa drogi dojazdowej ul.Kosmonautów do osiedla Nowe Żerniki WUWA-2 Wrocław</li>
-                    <li>Budowa infrastruktury drogowej wraz z uzbrojeniem terenu osiedle Nowe Żerniki WUWA-2 Wrocław</li>
-                    <li>Pomiar elewacji budynku TP SA - ul. Purkyniego we Wrocławiu</li>
-                    <li>Budowa stacji transformatorowych wysokiego napięcia – Wrocław GPZ Skarbowców</li>
-                    <li>Przebudowa ul. Marii Curie-Skłodowskiej we Wrocławiu</li>
-                    <li>Budowa węzła wodnego dla miasta Wrocławia odcinek B-1.3</li>
+        <section class="realizations " id="realizations">
+            <h2 class="realizations__header">realizacje</h2>
+            <article class>
+                <h3 class="realizations__info">ZAUFAŁO NAM WIELE FIRM I KLIENTÓW INDYWIDUALNYCH</h3>
+                <p class="realizations__info2">potwierdza to uczestnictwo przy większych realizacjach:</p>
+                <ul class="realizations__list">
+                    <li class="list__elem">Budowa płyty postojowej dla Samolotów – Lotnisko Wrocław, Strachowice</li>
+                    <li class="list__elem">Obsługa budowy mostów Warszawskich – Wrocław</li>
+                    <li class="list__elem">Realizacja magistrali wodociągowej – Wrocław, Opatowice-Strachocin</li>
+                    <li class="list__elem">Realizacji sieci 110kv Wrocław GPZ Krucza – GPZ Skarbowców</li>
+                    <li class="list__elem">Geodezyjna obsługa budowy trasy DK94 Wrocław – Środa Śląska</li>
+                    <li class="list__elem">Geodezyjna obsługa Hal przemysłowych Bosch, Wrocław</li>
+                    <li class="list__elem">Obsługa budowy Betoniarni ul. Kępińska Wrocław</li>
+                    <li class="list__elem">Przebudowy Wrocławskich dróg m.in. Hubska, Ślężna, Pl. Grunwaldzki, Kosmonautów, Weigla, Pl. Powstańców Wielkopolskich</li>
+                    <li class="list__elem">Budowa budynku "Nosorożarni " ZOO Wrocław</li>
+                    <li class="list__elem">Kompleks dydaktyczno-koncertowy Akademii Muzycznej we Wrocławiu</li>
+                    <li class="list__elem">Modernizacja filtrów uzdatniania wody MPWiK przy ul. Na Grobli we Wrocławiu</li>
+                    <li class="list__elem">Pomiar zniekształceń kolektora sanitarnego Ślęza</li>
+                    <li class="list__elem">Przebudowa ul Miłoszyckiej</li>
+                    <li class="list__elem">Budowa drogi dojazdowej ul.Kosmonautów do osiedla Nowe Żerniki WUWA-2 Wrocław</li>
+                    <li class="list__elem">Budowa infrastruktury drogowej wraz z uzbrojeniem terenu osiedle Nowe Żerniki WUWA-2 Wrocław</li>
+                    <li class="list__elem">Pomiar elewacji budynku TP SA - ul. Purkyniego we Wrocławiu</li>
+                    <li class="list__elem">Budowa stacji transformatorowych wysokiego napięcia – Wrocław GPZ Skarbowców</li>
+                    <li class="list__elem">Przebudowa ul. Marii Curie-Skłodowskiej we Wrocławiu</li>
+                    <li class="list__elem">Budowa węzła wodnego dla miasta Wrocławia odcinek B-1.3</li>
                 </ul>
             </article>
         </section>
-        <section class="reference " id="reference ">
+        <!-- REFERENCE -->
+        <section class="reference" id="reference ">
             <h2 class="reference__header ">referencje</h2>
-            <p>Firmy z którymi współpracujemy:</p>
+            <p class="reference__info">Firmy z którymi współpracujemy:</p>
             <img class="reference__logo " src="images/firmy/skanska.png " alt="logo firmy skanska ">
             <img class="reference__logo " src="images/firmy/pebud.png " alt="logo firmy pebud ">
             <img class="reference__logo " src="images/firmy/elektrotim.png " alt="logo firmy elektrotim ">
@@ -142,36 +138,31 @@
             <img class="reference__logo " src="images/firmy/miwro.png " alt="logo firmy miwro ">
             <img class="reference__logo " src="images/firmy/fitting.png " alt="logo firmy fitting ">
             <img class="reference__logo " src="images/firmy/elkom.png " alt="log firmy elkom ">
-            <img class="reference__logo2 "  src="images/firmy/wg.jpg " alt="logo firmy wajergaz ">
-
-
-
+            <img class="reference__logo2 " src="images/firmy/wg.jpg " alt="logo firmy wajergaz ">
         </section>
-
-        <!-- qualifications -->
-
-        <section class="qualifications " id="qualifications ">
+        <!-- QUALIFICATION -->
+        <section class="qualifications" id="qualifications">
             <h2 class="qualifications__headers ">uprawnienia</h2>
             <figure class="qualifications__doc ">
                 <img src="images/firmy/t1.png " alt="świadectwo nadania uprawnień ">
-                <figcaption  class="qualifications__doc__figcaption ">Paweł Bagiński <br>  zakres 1, 4</figcaption>
+                <figcaption class="qualifications__doc__figcaption ">Paweł Bagiński
+                    <br> zakres 1, 4</figcaption>
             </figure>
             <figure class="qualifications__doc ">
                 <img src="images/firmy/t1.png " alt="świadectwo nadania uprawnień ">
-                <figcaption class="qualifications__doc__figcaption ">Sławomir Gosek <br>  zakres 1</figcaption>
+                <figcaption class="qualifications__doc__figcaption ">Sławomir Gosek
+                    <br> zakres 1</figcaption>
             </figure>
             <figure class="qualifications__doc ">
                 <img src="images/firmy/t1.png " alt="świadectwo nadania uprawnień ">
-                <figcaption class="qualifications__doc__figcaption ">Jacek Aszurkiewicz <br> zakres 1</figcaption>
+                <figcaption class="qualifications__doc__figcaption ">Jacek Aszurkiewicz
+                    <br> zakres 1</figcaption>
             </figure>
-
             <svg class="skos " xmlns="http://www.w3.org/2000/svg " viewBox="0 0 100 100 " preserveAspectRatio="none ">
-    <polygon fill="#395C68 " points="0,100 100,0 100,100 "/>
-  </svg>
+                <polygon fill="#395C68 " points="0,100 100,0 100,100 " />
+            </svg>
         </section>
-
         <!-- CONTACT -->
-
         <section class="contact " id="contact ">
             <h2 class="contact__header ">kontakt</h2>
             <img class="contact__logo " src="images/logo.png " alt="logo firmy geokart ">
@@ -190,14 +181,15 @@
                 <li>&#42;Istnieje również możliwość umówienia spotkania poza godzinami otwarcia biura – po wcześniejszym uzgodnieniu terminu.</li>
             </ul>
             <div id="map" class="contact__map "></div>
-
             <div class="contact__info ">
-                <p>Zapraszamy do wsółpracy, <br>prosimy o kontakt telefoniczny bądź mailowy:</p>
+                <p>Zapraszamy do wsółpracy,
+                    <br>prosimy o kontakt telefoniczny bądź mailowy:</p>
                 <div class="contact__details ">
                     <p class="contact__name ">mgr
                         <br> Paweł Bagiński</p>
                     <div class="contact__details--hidden ">
-                        <a class="details__link " href="tel:+48509429750 " title=" ">509-429-750</a><br>
+                        <a class="details__link " href="tel:+48509429750 " title=" ">509-429-750</a>
+                        <br>
                         <a class="details__link " href="mailto:pawel.baginski.geokart@gmail.com%20?subject=Zapytanie_ofertowe ">pawel.baginski.geokart@gmail.com</a>
                     </div>
                 </div>
@@ -205,7 +197,8 @@
                     <p class="contact__name ">mgr inż.
                         <br> Jacek Aszurkiewicz</p>
                     <div class="contact__details--hidden ">
-                        <a class="details__link " href="tel:+48509429750 " title=" ">660-614-468</a><br>
+                        <a class="details__link " href="tel:+48509429750 " title=" ">660-614-468</a>
+                        <br>
                         <a class="details__link " href="mailto:pawel.baginski.geokart@gmail.com%20?subject=Zapytanie_ofertowe ">jacek.aszurkiewicz@gmail.com</a>
                     </div>
                 </div>
@@ -213,7 +206,8 @@
                     <p class="contact__name ">mgr
                         <br> Sławomir Gosek</p>
                     <div class="contact__details--hidden ">
-                        <a class="details__link " href="tel:+48509429750 " title=" ">501-466-370</a><br>
+                        <a class="details__link " href="tel:+48509429750 " title=" ">501-466-370</a>
+                        <br>
                         <a class="details__link " href="mailto:pawel.baginski.geokart@gmail.com%20?subject=Zapytanie_ofertowe ">slawek.gosek@gmail.com</a>
                     </div>
                 </div>
@@ -223,10 +217,8 @@
     <footer class="footer ">
         <div class="footer__info ">2017 Michał Maleszewski | All Right Reserved</div>
     </footer>
-<script async defer
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8m_PvCfAUkOQ1tb31U3A6mvT5XrCB-Ns&callback=initMap ">
-</script>
-  
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8m_PvCfAUkOQ1tb31U3A6mvT5XrCB-Ns&callback=initMap ">
+    </script>
     <script src="ES6/script.js "></script>
 </body>
 
