--- a/app/index.html
+++ b/app/index.html
@@ -142,33 +142,42 @@
         </section>
         <!-- QUALIFICATION -->
         <section class="qualifications" id="qualifications">
-            <h2 class="qualifications__headers ">uprawnienia</h2>
-            <figure class="qualifications__doc ">
-                <img src="images/firmy/t1.png " alt="świadectwo nadania uprawnień ">
-                <figcaption class="qualifications__doc__figcaption ">Paweł Bagiński
-                    <br> zakres 1, 4</figcaption>
+            <h2 class="qualifications__headers">uprawnienia</h2>
+            <p class="qualifications__info">Główny geodeta kraju Świadectwo</p>
+            <p class="qualifications__info">Nadania uprawnien zawodowych w dziedzinie geodezji i kartografii</p>
+            <figure class="snip1573 hover">
+                <p>Paweł Bagiński
+                    <br> zakres 1, 4</p>
+                <figcaption>
+                    <h3>pokaż</h3>
+                </figcaption>
+                <a href="#"></a>
             </figure>
-            <figure class="qualifications__doc ">
-                <img src="images/firmy/t1.png " alt="świadectwo nadania uprawnień ">
-                <figcaption class="qualifications__doc__figcaption ">Sławomir Gosek
-                    <br> zakres 1</figcaption>
+            <figure class="snip1573 hover">
+                <p>Sławomir Gosek
+                    <br> zakres 1</p>
+                <figcaption>
+                    <h3>pokaż</h3>
+                </figcaption>
+                <a href="#"></a>
             </figure>
-            <figure class="qualifications__doc ">
-                <img src="images/firmy/t1.png " alt="świadectwo nadania uprawnień ">
-                <figcaption class="qualifications__doc__figcaption ">Jacek Aszurkiewicz
-                    <br> zakres 1</figcaption>
+            <figure class="snip1573 hover">
+                <p>Jacek Aszurkiewicz
+                    <br> zakres 1</p>
+                <figcaption>
+                    <h3>pokaż</h3>
+                </figcaption>
+                <a href="#"></a>
             </figure>
             <svg class="skos " xmlns="http://www.w3.org/2000/svg " viewBox="0 0 100 100 " preserveAspectRatio="none ">
                 <polygon fill="#395C68 " points="0,100 100,0 100,100 " />
             </svg>
         </section>
         <!-- CONTACT -->
-        <section class="contact " id="contact ">
+        <section class="contact" id="contact">
             <h2 class="contact__header ">kontakt</h2>
-            <img class="contact__logo " src="images/logo.png " alt="logo firmy geokart ">
-            <h3 class="contact__company ">Usługi Geodezyjne i Kartograficzne<br/>
-                        GEO-KART S.C.</h3>
-            <address class="contact__address ">
+            <h3 class="contact__company ">Usługi Geodezyjne i Kartograficzne GEO-KART S.C.</h3>
+            <address class="contact__address">
                 <span class="address__elem "><b>Adres:</b>ul. Kozanowska 75/14 Wrocław</span>
                 <span class="address__elem "><b>biuro:</b>ul. Żegiestowska 11 Wrocław</span>
                 <span class="address__elem "><b>nip:</b>894-302-25-80 <b>regon:</b>021538810</span>
@@ -181,34 +190,33 @@
                 <li>&#42;Istnieje również możliwość umówienia spotkania poza godzinami otwarcia biura – po wcześniejszym uzgodnieniu terminu.</li>
             </ul>
             <div id="map" class="contact__map "></div>
-            <div class="contact__info ">
-                <p>Zapraszamy do wsółpracy,
+            <div class="contact__info">
+                <p class="contact__desc">Zapraszamy do wsółpracy,
                     <br>prosimy o kontakt telefoniczny bądź mailowy:</p>
                 <div class="contact__details ">
                     <p class="contact__name ">mgr
                         <br> Paweł Bagiński</p>
-                    <div class="contact__details--hidden ">
-                        <a class="details__link " href="tel:+48509429750 " title=" ">509-429-750</a>
+                    <div class="contact__box">
+                        <a class="box__link" href="tel:+48509429750 " title=" ">509-429-750</a>
                         <br>
-                        <a class="details__link " href="mailto:pawel.baginski.geokart@gmail.com%20?subject=Zapytanie_ofertowe ">pawel.baginski.geokart@gmail.com</a>
+                        <a class="box__link" href="mailto:pawel.baginski.geokart@gmail.com%20?subject=Zapytanie_ofertowe ">pawel.baginski.geokart@gmail.com</a>
                     </div>
                 </div>
-                <div class="contact__details ">
-                    <p class="contact__name ">mgr inż.
+                <div class="contact__details">
+                    <p class="contact__name">mgr inż.
                         <br> Jacek Aszurkiewicz</p>
-                    <div class="contact__details--hidden ">
-                        <a class="details__link " href="tel:+48509429750 " title=" ">660-614-468</a>
-                        <br>
-                        <a class="details__link " href="mailto:pawel.baginski.geokart@gmail.com%20?subject=Zapytanie_ofertowe ">jacek.aszurkiewicz@gmail.com</a>
+                    <div class="contact__box">
+                        <a class="box__link" href="tel:+48509429750 " title=" ">660-614-468</a>
+                        <a class="box__link" href="mailto:pawel.baginski.geokart@gmail.com%20?subject=Zapytanie_ofertowe ">jacek.aszurkiewicz@gmail.com</a>
                     </div>
                 </div>
                 <div class="contact__details ">
                     <p class="contact__name ">mgr
                         <br> Sławomir Gosek</p>
-                    <div class="contact__details--hidden ">
-                        <a class="details__link " href="tel:+48509429750 " title=" ">501-466-370</a>
+                    <div class="contact__box">
+                        <a class="box__link" href="tel:+48509429750 " title=" ">501-466-370</a>
                         <br>
-                        <a class="details__link " href="mailto:pawel.baginski.geokart@gmail.com%20?subject=Zapytanie_ofertowe ">slawek.gosek@gmail.com</a>
+                        <a class="box__link" href="mailto:pawel.baginski.geokart@gmail.com%20?subject=Zapytanie_ofertowe ">slawek.gosek@gmail.com</a>
                     </div>
                 </div>
             </div>
