--- a/app/index.html
+++ b/app/index.html
@@ -46,12 +46,12 @@
         <nav class="header__menu">
             <button class="fa fa-bars menu__btn" title=" otwórz menu " aria-hidden="true"></button>
             <ul class="menu__list">
-                <li class="list__elem"><a class="list__link" tabindex="0" href="#start" title="strona główna ">home</a></li>
-                <li class="list__elem"><a class="list__link" tabindex="0" href="#company">o firmie</a></li>
-                <li class="list__elem"><a class="list__link" tabindex="0" href="#realizations">realizacje</a></li>
-                <li class="list__elem"><a class="list__link" tabindex="0" href="# ">referencje</a></li>
-                <li class="list__elem"><a class="list__link" tabindex="0" href="# ">kontakt</a></li>
-                <li class="list__elem"><a class="list__link" tabindex="0" href="# ">linki</a></li>
+                <li class="list__elem"><a class="list__link" tabindex="0" href="#start" title="strona główna">home</a></li>
+                <li class="list__elem"><a class="list__link" tabindex="0" href="#company" title="sekcja o fimie">o firmie</a></li>
+                <li class="list__elem"><a class="list__link" tabindex="0" href="#realizations" title="zrealizowane wieksze budowy">realizacje</a></li>
+                <li class="list__elem"><a class="list__link" tabindex="0" href="#reference" title="referencje">referencje</a></li>
+                <li class="list__elem"><a class="list__link" tabindex="0" href="#contact" title="kontakt">kontakt</a></li>
+                <li class="list__elem"><a class="list__link" tabindex="0" href="#" title="linki do przydatnych stron">linki</a></li>
             </ul>
         </nav>
     </header>
@@ -64,9 +64,9 @@
                 <p class="start__info">s.c.</p>
             </div>
             <p class="start__info2">Od ponad 15 lat zajmujemy się realizacjami prac geodezyjnych</p>
-            <svg xmlns="http://www.w3.org/2000/svg " viewBox="0 0 100 100 " preserveAspectRatio="none ">
-                <polygon class="svg--sm " fill="#8F989B " points="0,0 30,100 65,21 90,100 100,75 100,100 0,100 " />
-                <polygon class="svg--lg " fill="#8F989B " points="0,0 15,100 33,21 45,100 50,75 55,100 72,20 85,100 95,50 100,80 100,100 0,100 " />
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none ">
+                <polygon class="svg--sm " fill="#181D26" points="0,0 30,100 65,21 90,100 100,75 100,100 0,100 " />
+                <polygon class="svg--lg " fill="#181D26" points="0,0 15,100 33,21 45,100 50,75 55,100 72,20 85,100 95,50 100,80 100,100 0,100 " />
             </svg>
         </section>
         <!-- COMPANY -->
@@ -127,7 +127,7 @@
             </article>
         </section>
         <!-- REFERENCE -->
-        <section class="reference" id="reference ">
+        <section class="reference" id="reference">
             <h2 class="reference__header ">referencje</h2>
             <p class="reference__info">Firmy z którymi współpracujemy:</p>
             <img class="reference__logo " src="images/firmy/skanska.png " alt="logo firmy skanska ">
@@ -138,7 +138,7 @@
             <img class="reference__logo " src="images/firmy/miwro.png " alt="logo firmy miwro ">
             <img class="reference__logo " src="images/firmy/fitting.png " alt="logo firmy fitting ">
             <img class="reference__logo " src="images/firmy/elkom.png " alt="log firmy elkom ">
-            <img class="reference__logo2 " src="images/firmy/wg.jpg " alt="logo firmy wajergaz ">
+            <img class="reference__logo-small " src="images/firmy/wg.jpg " alt="logo firmy wajergaz ">
         </section>
         <!-- QUALIFICATION -->
         <section class="qualifications" id="qualifications">
@@ -151,7 +151,7 @@
                 <figcaption>
                     <h3>pokaż</h3>
                 </figcaption>
-                <a href="#"></a>
+                <a href="images/pawel.png" target="_blank" title="uprawnienia Paweł Bagiński"></a>
             </figure>
             <figure class="snip1573 hover">
                 <p>Sławomir Gosek
@@ -159,7 +159,7 @@
                 <figcaption>
                     <h3>pokaż</h3>
                 </figcaption>
-                <a href="#"></a>
+                <a href="images/slawek.png" title="uprawnienia Sławomir Gosek"></a>
             </figure>
             <figure class="snip1573 hover">
                 <p>Jacek Aszurkiewicz
@@ -167,28 +167,30 @@
                 <figcaption>
                     <h3>pokaż</h3>
                 </figcaption>
-                <a href="#"></a>
+                <a href="images/jacek.png" title="uprawnienia Jacek Aszurkiewicz"></a>
             </figure>
-            <svg class="skos " xmlns="http://www.w3.org/2000/svg " viewBox="0 0 100 100 " preserveAspectRatio="none ">
-                <polygon fill="#395C68 " points="0,100 100,0 100,100 " />
+            <svg class="skos " xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100 " preserveAspectRatio="none ">
+                <polygon fill="#595956" points="0,100 100,0 100,100 " />
             </svg>
         </section>
         <!-- CONTACT -->
         <section class="contact" id="contact">
-            <h2 class="contact__header ">kontakt</h2>
-            <h3 class="contact__company ">Usługi Geodezyjne i Kartograficzne GEO-KART S.C.</h3>
-            <address class="contact__address">
-                <span class="address__elem "><b>Adres:</b>ul. Kozanowska 75/14 Wrocław</span>
-                <span class="address__elem "><b>biuro:</b>ul. Żegiestowska 11 Wrocław</span>
-                <span class="address__elem "><b>nip:</b>894-302-25-80 <b>regon:</b>021538810</span>
-                <span class="address__elem "><b>konto:</b>Alior Bank S.A. <br> 37 2490 0005 0000 4500 3180 0289</span>
-            </address>
-            <h4 class="contact__office__header ">godziny otwarcia biura</h4>
-            <ul class="office__days ">
-                <li>Poniedziałek - Piątek 7:00-15:00</li>
-                <li>Sobota - Niedziela <span>nieczynne</span> </li>
-                <li>&#42;Istnieje również możliwość umówienia spotkania poza godzinami otwarcia biura – po wcześniejszym uzgodnieniu terminu.</li>
-            </ul>
+            <div class="contact__container">
+                <h2 class="contact__header ">kontakt</h2>
+                <h3 class="contact__company ">Usługi Geodezyjne i Kartograficzne GEO-KART S.C.</h3>
+                <address class="contact__address">
+                    <span class="address__elem "><b>Adres:</b>ul. Kozanowska 75/14 Wrocław</span>
+                    <span class="address__elem "><b>biuro:</b>ul. Żegiestowska 11 Wrocław</span>
+                    <span class="address__elem "><b>nip:</b>894-302-25-80 <b>regon:</b>021538810</span>
+                    <span class="address__elem "><b>konto:</b>Alior Bank S.A. <br> 37 2490 0005 0000 4500 3180 0289</span>
+                </address>
+                <h4 class="contact__office__header ">godziny otwarcia biura</h4>
+                <ul class="office__days ">
+                    <li>Poniedziałek - Piątek 7:00-15:00</li>
+                    <li>Sobota - Niedziela <span>nieczynne</span> </li>
+                    <li>&#42;Istnieje również możliwość umówienia spotkania poza godzinami otwarcia biura – po wcześniejszym uzgodnieniu terminu.</li>
+                </ul>
+            </div>
             <div id="map" class="contact__map "></div>
             <div class="contact__info">
                 <p class="contact__desc">Zapraszamy do wsółpracy,
