--- a/app/index.html
+++ b/app/index.html
@@ -15,12 +15,12 @@
     <!--[if IE]>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <![endif]-->
-    <!-- ARKUSZE STYLI -->
-    <link rel="stylesheet" href="css/vendor/normalize.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+
     <link href="https://fonts.googleapis.com/css?family=Oswald:300,600" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
     <link href="images/favicon.ico" rel="shortcut icon" type="image/ico">
+    <!-- build:css -->
+    <link rel="stylesheet" href="css/main.css">
+    <!-- endbuild -->
     <script>
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
@@ -40,11 +40,16 @@
 </head>
 
 <body>
+    <div clss="preloader">
+       <i class="icon-spin4"></i> 
+    </div>
     <!-- HEADER -->
     <header class="page__header">
         <img class="header__logo" src="images/logo.png" alt="logo firmy geokart">
         <nav class="header__menu">
-            <button class="fa fa-bars menu__btn" title=" otwórz menu " aria-hidden="true"></button>
+            <button class="menu__btn" title="otwórz menu" aria-hidden="true">
+                <span class="icon-menu"></span>
+            </button>
             <ul class="menu__list">
                 <li class="list__elem"><a class="list__link" tabindex="0" href="#start" title="strona główna">home</a></li>
                 <li class="list__elem"><a class="list__link" tabindex="0" href="#company" title="sekcja o fimie">o firmie</a></li>
@@ -128,6 +133,7 @@
         </section>
         <!-- REFERENCE -->
         <section class="reference" id="reference">
+            <span class="demo-icon icon-handshake-o"></span> 
             <h2 class="reference__header ">referencje</h2>
             <p class="reference__info">Firmy z którymi współpracujemy:</p>
             <img class="reference__logo " src="images/firmy/skanska.png " alt="logo firmy skanska ">
@@ -229,7 +235,9 @@
     </footer>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8m_PvCfAUkOQ1tb31U3A6mvT5XrCB-Ns&callback=initMap ">
     </script>
-    <script src="ES6/script.js "></script>
+    <!-- build:js -->
+    <script src="js/script.js "></script>
+    <!-- endbuild -->
 </body>
 
 </html>
