--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald:300,600" rel="stylesheet">
     <link href="images/favicon.ico" rel="shortcut icon" type="image/ico">
     <!-- build:css -->
-    <link rel="stylesheet" href="css/main.css">
+    <link href="css/main.css" rel="stylesheet">
     <!-- endbuild -->
     <script>
     (function(i, s, o, g, r, a, m) {
@@ -40,8 +40,12 @@
 </head>
 
 <body>
-    <div clss="preloader">
-       <i class="icon-spin4"></i> 
+    <div class="loader__wrapper">
+
+        <div class="loader">
+       <span class="icon-spin4"></span> 
+            <p>trwa ładowanie strony...</p>
+        </div>
     </div>
     <!-- HEADER -->
     <header class="page__header">
